--- a/grasshooper/src/styles/TiendaStyle.css
+++ b/grasshooper/src/styles/TiendaStyle.css
@@ -1,8 +1,9 @@
 .menu{
     padding: 1rem;
-    background-color: black;
+    background-color: #232F3E;
     color:blue;
     font-family: Arial, Helvetica, sans-serif;
+   
 }
 .menu div{
     color:white;
@@ -13,4 +14,13 @@
     padding: 1rem;
     border-top-color: grey;
     border-bottom-color: grey;
+}
+.productos{
+    display: flex;
+    flex-wrap: wrap;
+}
+.productCard{
+    width: 20%;
+    padding: 5px;
+    margin: 5px;
 }
